--- a/src/html/admin_content.html
+++ b/src/html/admin_content.html
@@ -4,7 +4,7 @@
     <div class="section-content border-${mainColor}-500">
       <div class="section-content-h h-[96px]">
         <div class="section-content-h2">
-          <button id="${sectionName}_tab" class="section-content-tab hidden bg-gray-200 hover:bg-gray-300">
+          <button id="${sectionName}_tab" class="section-content-tab hidden bg-gray-200 hover:bg-gray-300 min-w-[150px]">
             <p class="mb-6 text-base"></p>
             <div class="absolute inset-0 mt-6 content-center">
               <p class="text-xs text-gray-500"></p>
