feat: delegated methods

--- a/src/html/admin_header.html
+++ b/src/html/admin_header.html
@@ -14,7 +14,7 @@
       ${middletext}
     </div>
   </div>
-  <div class="flex gap-2 2xl:gap-4">
+  <div class="z-10 flex gap-2 2xl:gap-4">
     <button
       data-section="${sectionName}"
       class="section-main-btn text-${btnColor}-500 hover:bg-${btnColor}-500 hover:shadow-${btnColor}-700 active:bg-${btnColor}-600 active:translate-y-1 active:scale-95 active:shadow-none"
