--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -63,7 +63,7 @@
       </footer>
     </aside>
 
-    <!-- main -->
+    <!-- main workspace -->
     <div class="ml-48 min-h-screen p-4 xl:ml-64 2xl:p-8">
       <!--
 
@@ -112,8 +112,6 @@
           data-subtitle="Announcements"
           data-middletext="There's no news yet. Create one! 👉"
           data-mainbtntext="Announce 📢"
-          data-mainformtitle="Create Announcement 📢"
-          data-mainformsubtitle="Announcement form"
           data-subbtntext="Check 👁‍🗨"
           data-customcontent="1"
         ></div>
@@ -316,34 +314,40 @@
         <div id="section-content"></div>
       </section>
 
-      <!-- 🔥 jest 🔥 -->
-      <section id="jest-section" data-icons="fa-file" data-color="violet-fuchsia-red" class="section">
-        <div
-          id="section-header"
-          data-title="Test"
-          data-subtitle="Data Overview"
-          data-mainbtntext="Export to PDF 📄"
-        ></div>
-        <div
-          id="section-stats"
-        ></div>
+      <!-- 🔥 sample 🔥 -->
+      <!-- <section id="sample-section" data-icons="fa-fire-flame-simple" data-color="violet-fuchsia-red" class="section">
+        <div id="section-header" data-title="Sample module"></div>
+        <div id="section-stats"></div>
         <div
           id="section-content"
-          data-sectioncount="2"
-          data-tabtitles="Active Monthly Pass Growth::Upcoming Monthly Pass Renewals"
-          data-subtitles="Monthly pass growth tracker::Users due for monthly pass renewals"
-          data-sectiononesearchtext="Search keyword..."
-          data-sectiononesettings="1"
-          data-listemptytexts="::<p>No upcoming monthly pass renewals yet</p><p class='text-sm'>Range: Two weeks notice</p>"
-          data-listtitletexts="[]::[User ID//User//Expires After]"
-          data-listitembtnids="[]::[renewBtn]"
-          data-listitembtntexts="[]::[Renew 🎫]"
-          data-listitembtncolors="[]::[sky]"
-          data-sectiontwotitletexts="User Statistic Analysis::Below the chart, you can click legends to toggle"
-          data-sectiontwosettings="1"
+          data-sectioncount="1"
+          data-tabtitles="Sample tab"
+          data-subtitles="Sample tab description"
         ></div>
-      </section>
+      </section> -->
+
+      <!-- 🔥 sampleparent-samplechild 🔥 -->
+      <!-- <section
+        id="sampleparent-samplechild-section"
+        data-icons="fa-vials::fa-vial"
+        data-sectiontexts="Sample Parent::Sample Child"
+        data-color="teal-sky-red"
+        class="section"
+      >
+        <div id="section-header" data-title="Sample module"></div>
+        <div id="section-stats"></div>
+        <div
+          id="section-content"
+          data-sectioncount="1"
+          data-tabtitles="Sample tab"
+          data-subtitles="Sample tab description"
+        ></div>
+      </section> -->
     </div>
+
+    <!-- 🔥 resources 🔥 -->
+    <!-- icons: https://fontawesome.com/search -->
+    <!-- colors: https://tailwindcss.com/docs/colors -->
 
     <!-- 🔥 dynamic modal 🔥 -->
     <div id="admin_modal"></div>
@@ -359,7 +363,6 @@
     <script type="module" src="/src/js/admin_modules/reports.js"></script>
     <script type="module" src="/src/js/admin_modules/datasync.js"></script>
     <script type="module" src="/src/js/admin_modules/settings.js"></script>
-    <script type="module" src="/src/js/admin_modules/jest.js"></script>
     <!-- add new js here 👆 -->
 
     <!-- imported js -->
