--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -357,13 +357,7 @@
     <script type="module" src="/src/js/admin_main.js"></script>
     <script type="module" src="/src/js/admin_stats.js"></script>
     <script type="module" src="/src/js/admin_content.js"></script>
-    <script type="module" src="/src/js/admin_modules/dashboard.js"></script>
-    <script type="module" src="/src/js/admin_modules/checkin_daily.js"></script>
-    <script type="module" src="/src/js/admin_modules/billing.js"></script>
-    <script type="module" src="/src/js/admin_modules/reports.js"></script>
-    <script type="module" src="/src/js/admin_modules/datasync.js"></script>
-    <script type="module" src="/src/js/admin_modules/settings.js"></script>
-    <!-- add new js here 👆 -->
+    <script type="module" src="/src/js/admin_modules.js"></script>
 
     <!-- imported js -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
