store-selling adding product

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -183,6 +183,49 @@
         ></div>
       </section>
 
+         <!-- 🔥 store-selling 🔥 -->
+      <section  
+        id="store-selling-section"
+        data-icons="fa-store::fa-cart-shopping"
+        data-sectiontexts="Store::Selling Area"
+        data-color="yellow-orange-rose"
+        class="section"
+      >
+        <div
+          id="section-header"
+          data-title="Store"
+          data-subtitle="Selling Area"
+          data-middletext='<p class="skew-x-12 text-white">📆 July 25, 2025 ⌚ 7:30AM</p>'
+          data-mainbtntext="Add New Product 🛒"
+          data-subbtntext="Logs 📜"
+        ></div>
+        <div
+          id="section-stats"
+          data-toggles="0::0::0::0"
+          data-startingtexts="::Avg::Avg::Avg"
+          data-highlighttexts="Total::Morning::Afternoon::Evening"
+          data-endingtexts="Sales::Sales::Sales::Sales"
+        ></div>
+        <div
+          id="section-content"
+          data-sectioncount="2"
+          data-tabtitles="Registered Daily Users::Recent Daily Check-Ins"
+          data-subtitles="Daily users monitoring::Today's user daily check-ins"
+          data-sectiononesearchtext="Search keyword..."
+          data-sectiononesettings="1"
+          data-listemptytexts="No registered users yet::No check-ins today"
+          data-listtitletexts="[Product ID//Product Name//Product Type//Quantity//Price//Date Registered]::[Product ID//Product Name//Product Type//Quantity//Price//Check-in Time]"
+          data-listitembtnids="[userDetailsBtn]::[renewBtn//userVoidBtn]"
+          data-listitembtntexts="[Details ⚙]::[Details ⚙//Void 📕]"
+          data-listitembtncolors="[orange]::[orange//red]"
+          data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
+          data-sectiontwosettings="1"
+          data-sectiontwoemptylist='<p>Status - No connection</p><p class="text-sm">No uploaded QR yet</p>'
+          data-sectiontwosearchtext="Enter user ID..."
+          data-sectiontwobtntext="Submit Check-In"
+        ></div>
+      </section>
+
       <!-- 🔥 maintenance 🔥 -->
       <section id="maintenance-section" data-icons="fa-dumbbell" data-color="sky-red-violet" class="section">
         <div
@@ -392,6 +435,7 @@
     <script type="module" src="/src/js/admin_stats.js"></script>
     <script type="module" src="/src/js/admin_content.js"></script>
     <script type="module" src="/src/js/admin_modules.js"></script>
+    <script type="module" src="/src/js/admin_modules/store_selling.js"></script>
 
     <!-- imported js -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
