--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -184,7 +184,7 @@
       </section>
 
       <!-- 🔥 maintenance 🔥 -->
-      <section id="maintenance-section" data-icons="fa-dumbbell" data-color="sky-red-violet" class="section">
+      <section id="maintenance-section" data-icons="fa-dumbbell" data-color="cyan-blue-sky" class="section">
         <div
           id="section-header"
           data-title="Equipment Maintenance"
@@ -192,29 +192,21 @@
           data-middletext="Monitor and log maintenance for all gym equipment"
           data-mainbtntext="Log Maintenance 🛠️"
         ></div>
+        <div id="section-stats"></div>
         <div
-          id="section-stats"
-          data-toggles="0"
-          data-startingtexts=""
-          data-highlighttexts=""
-          data-endingtexts=""
+          id="section-content"
+          data-sectioncount="1"
+          data-tabtitles="Equipment Maintenance Records::View system activities and events"
+          data-subtitles="Upcoming and past equipment maintenance::System Logs"
+          data-sectiononesearchtext="Search equipment..."
+          data-sectiontwosearchtext="Search logs..."
+          data-sectiononesettings="1"
+          data-listemptytexts="No equipment maintenance records::No logs available"
+          data-listtitletexts="[Equipment Name//Last Maintenance//Status]::[Timestamp//Type//Message]"
+          data-listitembtnids="[maintenanceDetailsBtn]::[viewLogDetails]"
+          data-listitembtntexts="[Details 🛠️]::[Details 🔍]"
+          data-listitembtncolors="[orange]::[blue]"
         ></div>
-        <div
-        id="section-content"
-        data-sectioncount="2"
-        data-tabtitles="Equipment Maintenance Records,System Logs"
-        data-subtitles="Upcoming and past equipment maintenance,View system activities and events"
-        data-sectiononesearchtext="Search equipment..."
-        data-sectiontwosearchtext="Search logs..."
-        data-sectiononesettings="1"
-        data-sectiontwosettings="1"
-        data-listemptytexts="No equipment maintenance records,No logs available"
-        data-listtitletexts="Equipment Name//Last Maintenance//Status,Timestamp//Type//Message"
-        data-listitembtnids="maintenanceDetailsBtn,viewLogDetails"
-        data-listitembtntexts="Details 🛠️,Details 🔍"
-        data-listitembtncolors="orange,blue"
-        data-sectiontwotitletexts="System Activity Logs::Below are all recent system activities and events"
-      ></div>
       </section>
 
       <!-- 🔥 billing 🔥 -->
