fix: spinner input

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -152,7 +152,7 @@
           id="section-header"
           data-title="Daily Check-In"
           data-subtitle="Track User Attendance"
-          data-middletext='<p class="skew-x-12 text-white">📆 July 25, 2025 ⌚ 7:30AM</p>'
+          data-middletext='<p class="skew-x-12 text-white">📆 Live date ⌚ Live time</p>'
           data-mainbtntext="Register New User 💪"
           data-subbtntext="Logs 📜"
         ></div>
