--- a/src/html/admin_modal.html
+++ b/src/html/admin_modal.html
@@ -69,10 +69,7 @@
             <select
               id="input-spinner"
               class="w-full cursor-pointer appearance-none rounded-md border-2 border-gray-300 bg-gray-100 px-4 py-3 duration-300 focus:outline-amber-500 focus:ring-2 focus:ring-amber-200"
-            >
-              <option value="" disabled selected class="font-medium"></option>
-              <option value="" class="font-medium"></option>
-            </select>
+            ></select>
             <p class="absolute right-0 top-0 m-4 text-xs text-gray-400">▼</p>
           </div>
         </div>
