fix: performance issue

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -254,14 +254,7 @@
           data-subtitle="Data Overview"
           data-mainbtntext="Export to PDF 📄"
         ></div>
-        <div
-          id="section-stats"
-          data-toggles="0::0::0::1::0"
-          data-startingtexts="::::::Total::Total"
-          data-highlighttexts="Monthly::Regular::Student::Supplement::Reservations"
-          data-endingtexts="Users::Users::Users::Sales::"
-          data-types="::::::total supplement sales::"
-        ></div>
+        <div id="section-stats"></div>
         <div
           id="section-content"
           data-sectioncount="1"
