--- a/src/html/admin_content.html
+++ b/src/html/admin_content.html
@@ -42,7 +42,7 @@
           </button>
         </div>
       </div>
-      <div class="scrollbar-light min-h-[425px] p-6"></div>
+      <div class="scrollbar-light min-h-[425px] max-h-[425px] p-6"></div>
     </div>
   </div>
   <div class="flex flex-col col-span-1 hidden 2xl:col-span-4">
