feat: data manipulation

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -166,14 +166,14 @@
         <div
           id="section-content"
           data-sectioncount="2"
-          data-tabtitles="Registered Daily Users::Recent Daily Check-Ins"
-          data-subtitles="Daily users monitoring::Today's user daily check-ins"
+          data-tabtitles="Registered Daily Users::Daily Check-Ins Logbook"
+          data-subtitles="Manage daily users::All daily user check-ins"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
-          data-listemptytexts="No registered users yet::No check-ins today"
-          data-listtitletexts="[User ID//User//Date Registered]::[User ID//User//Check-in Time]"
-          data-listitembtnids="[userDetailsBtn]::[renewBtn//userVoidBtn]"
-          data-listitembtntexts="[Details ⚙]::[Details ⚙//Void 📕]"
+          data-listemptytexts="No registered users yet::No check-ins yet"
+          data-listtitletexts="[User ID//User//User Date Registered]::[User ID//User//User Check-in Date and Time]"
+          data-listitembtnids="[userEditDetailsBtn]::[userViewDetailsBtn//userVoidBtn]"
+          data-listitembtntexts="[Edit Details ⚙]::[View Details ⚙//Void 📕]"
           data-listitembtncolors="[orange]::[orange//red]"
           data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
           data-sectiontwosettings="1"
@@ -234,7 +234,7 @@
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
           data-listemptytexts="No complete transactions today::No complete transactions yet"
-          data-listtitletexts="[Transaction ID//User ID//Date & Time]::[Transaction ID//User ID//Date & Time]"
+          data-listtitletexts="[Transaction ID//User ID//Transaction Date and Time]::[Transaction ID//User ID//Transaction Date and Time]"
           data-listitembtnids="[billingDetailsBtn//billingVoidBtn]::[billingDetailsBtn//billingVoidBtn]"
           data-listitembtntexts="[Details 📒//Void 📕]::[Details 📒//Void 📕]"
           data-listitembtncolors="[yellow//red]::[yellow//red]"
@@ -259,7 +259,7 @@
           id="section-content"
           data-sectioncount="1"
           data-tabtitles="Monthly Pass Users::Regular / Daily Users::Students::Supplements::Reservations"
-          data-subtitles="::::::::"
+          data-subtitles="Monthly Pass Users::Regular / Daily Users::Students::Supplements::Reservations"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
           data-listemptytexts="No monthly members found::No regular users found::No student users found::No supplement sales found::No reservations found"
