--- a/src/html/admin_modal.html
+++ b/src/html/admin_modal.html
@@ -2,7 +2,7 @@
 <dialog
   id="modalContainer"
   data-color="amber"
-  class="z-20 fixed inset-0 flex hidden h-full w-full content-center overflow-y-auto bg-black/30 opacity-0 duration-300"
+  class="fixed inset-0 flex hidden h-full w-full content-center overflow-y-auto bg-black/30 opacity-0 duration-300"
 >
   <div
     class="m-auto w-full max-w-lg -translate-y-6 scale-95 overflow-hidden rounded-2xl bg-white shadow-xl duration-300 2xl:max-w-2xl"
