small fix: admin main html

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -230,8 +230,8 @@
          <!-- 🔥 store-inventory 🔥 -->
       <section  
         id="store-inventory-section"
-        data-icons="fa-store::fa-solid fa-warehouse"
-        data-sectiontexts="Store::Inventory"
+        data-icons="::fa-warehouse"
+        data-sectiontexts="::Inventory"
         data-color="yellow-orange-rose"
         class="section"
       >
