feat: access control module

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -140,6 +140,31 @@
         ></div>
       </section>
 
+      <!-- 🔥 accessmanagement 🔥 -->
+      <section id="accesscontrol-section" data-icons="fa-address-book"
+          data-sectiontexts="Access Control"
+         data-color="violet-fuchsia-red" class="section">
+        <div
+          id="section-header"
+          data-title="Access Control"
+          data-subtitle="System Access Management"
+        ></div>
+        <div id="section-stats"></div>
+        <div
+          id="section-content"
+          data-sectioncount="1"
+          data-tabtitles="System Permissions::System Roles::System Users"
+          data-subtitles="All Permissions::All Roles::All Users"
+          data-sectiononesearchtext="Search keyword..."
+          data-sectiononesettings="1"
+          data-listemptytexts="No permissions yet::No roles yet::No users yet"
+          data-listtitletexts="[Permission ID//Permission//Permission Mode]::[Role ID//Role//Role Permissions]::[User ID//User//User Role]"
+          data-listitembtnids="[permissionUpdateBtn//permissionDeleteBtn]::[roleUpdateBtn//roleDeleteBtn]::[userUpdateBtn//userDeleteBtn]"
+          data-listitembtntexts="[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]"
+          data-listitembtncolors="[blue//red]::[blue//red]::[blue//red]"
+        ></div>
+      </section>
+
       <!-- 🔥 checkin-daily 🔥 -->
       <section
         id="checkin-daily-section"
