small fix: formatting

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -140,15 +140,15 @@
         ></div>
       </section>
 
-      <!-- 🔥 accessmanagement 🔥 -->
-      <section id="accesscontrol-section" data-icons="fa-address-book"
-          data-sectiontexts="Access Control"
-         data-color="violet-fuchsia-red" class="section">
-        <div
-          id="section-header"
-          data-title="Access Control"
-          data-subtitle="System Access Management"
-        ></div>
+      <!-- 🔥 accesscontrol 🔥 -->
+      <section
+        id="accesscontrol-section"
+        data-icons="fa-address-book"
+        data-sectiontexts="Access Control"
+        data-color="violet-fuchsia-red"
+        class="section"
+      >
+        <div id="section-header" data-title="Access Control" data-subtitle="System Access Management"></div>
         <div id="section-stats"></div>
         <div
           id="section-content"
@@ -208,9 +208,8 @@
         ></div>
       </section>
 
-
-         <!-- 🔥 store-selling 🔥 -->
-      <section  
+      <!-- 🔥 store-selling 🔥 -->
+      <section
         id="store-selling-section"
         data-icons="fa-store::fa-cart-shopping"
         data-sectiontexts="Store::Selling Area"
@@ -252,8 +251,8 @@
         ></div>
       </section>
 
-         <!-- 🔥 store-inventory 🔥 -->
-      <section  
+      <!-- 🔥 store-inventory 🔥 -->
+      <section
         id="store-inventory-section"
         data-icons="::fa-warehouse"
         data-sectiontexts="::Inventory"
@@ -484,12 +483,11 @@
     <div id="admin_modal"></div>
 
     <!-- main js -->
-    <script src="/src/js/admin_dynamic_modules.js"></script>
+    <script src="/src/js/admin_modules.js"></script>
+    <script src="/src/js/admin_sidebar.js"></script>
     <script type="module" src="/src/js/admin_main.js"></script>
     <script type="module" src="/src/js/admin_stats.js"></script>
     <script type="module" src="/src/js/admin_content.js"></script>
-    <script type="module" src="/src/js/admin_modules.js"></script>
-    <script type="module" src="/src/js/admin_modules/store_selling.js"></script>
 
     <!-- imported js -->
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
