--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -140,37 +140,12 @@
         ></div>
       </section>
 
-      <!-- 🔥 accesscontrol 🔥 -->
-      <section
-        id="accesscontrol-section"
-        data-icons="fa-address-book"
-        data-sectiontexts="Access Control"
-        data-color="violet-fuchsia-red"
-        class="section"
-      >
-        <div id="section-header" data-title="Access Control" data-subtitle="System Access Management"></div>
-        <div id="section-stats"></div>
-        <div
-          id="section-content"
-          data-sectioncount="1"
-          data-tabtitles="System Permissions::System Roles::System Users"
-          data-subtitles="All Permissions::All Roles::All Users"
-          data-sectiononesearchtext="Search keyword..."
-          data-sectiononesettings="1"
-          data-listemptytexts="No permissions yet::No roles yet::No users yet"
-          data-listtitletexts="[Permission ID//Permission//Permission Mode]::[Role ID//Role//Role Permissions]::[User ID//User//User Role]"
-          data-listitembtnids="[permissionUpdateBtn//permissionDeleteBtn]::[roleUpdateBtn//roleDeleteBtn]::[userUpdateBtn//userDeleteBtn]"
-          data-listitembtntexts="[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]"
-          data-listitembtncolors="[blue//red]::[blue//red]::[blue//red]"
-        ></div>
-      </section>
-
       <!-- 🔥 checkin-daily 🔥 -->
       <section
         id="checkin-daily-section"
         data-icons="fa-users::fa-ticket-simple"
         data-sectiontexts="Check In::Daily Pass"
-        data-color="blue-indigo-green"
+        data-color="blue-indigo-orange"
         class="section"
       >
         <div
@@ -196,9 +171,52 @@
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
           data-listemptytexts="No registered users yet::No check-ins yet"
-          data-listtitletexts="[User ID//User//User Date Registered]::[User ID//User//User Check-in Date and Time]"
+          data-listtitletexts="[User ID//User//Date Registered]::[User ID//User//Date & Time]"
           data-listitembtnids="[userEditDetailsBtn]::[userViewDetailsBtn//userVoidBtn]"
           data-listitembtntexts="[Edit Details ⚙]::[View Details ⚙//Void 📕]"
+          data-listitembtncolors="[orange]::[orange//red]"
+          data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
+          data-sectiontwosettings="1"
+          data-sectiontwoemptylist='<p>Status - No connection</p><p class="text-sm">No uploaded QR yet</p>'
+          data-sectiontwosearchtext="Enter user ID..."
+          data-sectiontwobtntext="Submit Check-In"
+        ></div>
+      </section>
+
+      <!-- 🔥 store-inventory 🔥 -->
+      <section
+        id="store-inventory-section"
+        data-icons="fa-store::fa-warehouse"
+        data-sectiontexts="Store::Inventory"
+        data-color="yellow-orange-rose"
+        class="section"
+      >
+        <div
+          id="section-header"
+          data-title="Store"
+          data-subtitle="Selling Area"
+          data-middletext='<p class="skew-x-12 text-white">📆 July 25, 2025 ⌚ 7:30AM</p>'
+          data-mainbtntext="Add New Product 🛒"
+          data-subbtntext="Logs 📜"
+        ></div>
+        <div
+          id="section-stats"
+          data-toggles="0::0::0::0"
+          data-startingtexts="::Avg::Avg::Avg"
+          data-highlighttexts="Total::Morning::Afternoon::Evening"
+          data-endingtexts="Sales::Sales::Sales::Sales"
+        ></div>
+        <div
+          id="section-content"
+          data-sectioncount="2"
+          data-tabtitles="Registered Daily Users::Recent Daily Check-Ins"
+          data-subtitles="Daily users monitoring::Today's user daily check-ins"
+          data-sectiononesearchtext="Search keyword..."
+          data-sectiononesettings="1"
+          data-listemptytexts="No registered users yet::No check-ins today"
+          data-listtitletexts="[Product ID//Product Name//Product Type//Quantity//Price//Status//Date Registered]::[Product ID//Product Name//Product Type//Quantity//Price//Status//Check-in Time]"
+          data-listitembtnids="[userDetailsBtn]::[renewBtn//userVoidBtn]"
+          data-listitembtntexts="[Details ⚙]::[Details ⚙//Void 📕]"
           data-listitembtncolors="[orange]::[orange//red]"
           data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
           data-sectiontwosettings="1"
@@ -251,75 +269,6 @@
         ></div>
       </section>
 
-      <!-- 🔥 store-inventory 🔥 -->
-      <section
-        id="store-inventory-section"
-        data-icons="::fa-warehouse"
-        data-sectiontexts="::Inventory"
-        data-color="yellow-orange-rose"
-        class="section"
-      >
-        <div
-          id="section-header"
-          data-title="Store"
-          data-subtitle="Selling Area"
-          data-middletext='<p class="skew-x-12 text-white">📆 July 25, 2025 ⌚ 7:30AM</p>'
-          data-mainbtntext="Add New Product 🛒"
-          data-subbtntext="Logs 📜"
-        ></div>
-        <div
-          id="section-stats"
-          data-toggles="0::0::0::0"
-          data-startingtexts="::Avg::Avg::Avg"
-          data-highlighttexts="Total::Morning::Afternoon::Evening"
-          data-endingtexts="Sales::Sales::Sales::Sales"
-        ></div>
-        <div
-          id="section-content"
-          data-sectioncount="2"
-          data-tabtitles="Registered Daily Users::Recent Daily Check-Ins"
-          data-subtitles="Daily users monitoring::Today's user daily check-ins"
-          data-sectiononesearchtext="Search keyword..."
-          data-sectiononesettings="1"
-          data-listemptytexts="No registered users yet::No check-ins today"
-          data-listtitletexts="[Product ID//Product Name//Product Type//Quantity//Price//Status//Date Registered]::[Product ID//Product Name//Product Type//Quantity//Price//Status//Check-in Time]"
-          data-listitembtnids="[userDetailsBtn]::[renewBtn//userVoidBtn]"
-          data-listitembtntexts="[Details ⚙]::[Details ⚙//Void 📕]"
-          data-listitembtncolors="[orange]::[orange//red]"
-          data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
-          data-sectiontwosettings="1"
-          data-sectiontwoemptylist='<p>Status - No connection</p><p class="text-sm">No uploaded QR yet</p>'
-          data-sectiontwosearchtext="Enter user ID..."
-          data-sectiontwobtntext="Submit Check-In"
-        ></div>
-      </section>
-
-      <!-- 🔥 maintenance 🔥 -->
-      <section id="maintenance-section" data-icons="fa-dumbbell" data-color="cyan-blue-sky" class="section">
-        <div
-          id="section-header"
-          data-title="Equipment Maintenance"
-          data-subtitle="Manage Gym Equipment Maintenance"
-          data-middletext="Monitor and log maintenance for all gym equipment"
-          data-mainbtntext="Log Maintenance 🛠️"
-        ></div>
-        <div id="section-stats"></div>
-        <div
-          id="section-content"
-          data-sectioncount="1"
-          data-tabtitles="Equipment Maintenance Records::View system activities and events"
-          data-subtitles="Upcoming and past equipment maintenance::System Logs"
-          data-sectiononesearchtext="Search equipment..."
-          data-sectiontwosearchtext="Search logs..."
-          data-sectiononesettings="1"
-          data-listemptytexts="No equipment maintenance records::No logs available"
-          data-listtitletexts="[Equipment Name//Last Maintenance//Status]::[Timestamp//Type//Message]"
-          data-listitembtnids="[maintenanceDetailsBtn]::[viewLogDetails]"
-          data-listitembtntexts="[Details 🛠️]::[Details 🔍]"
-          data-listitembtncolors="[orange]::[blue]"
-        ></div>
-      </section>
-
       <!-- 🔥 billing 🔥 -->
       <section id="billing-section" data-icons="fa-coins" data-color="green-cyan-yellow" class="section">
         <div
@@ -345,7 +294,7 @@
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
           data-listemptytexts="No complete transactions today::No complete transactions yet"
-          data-listtitletexts="[Transaction ID//User ID//Transaction Date and Time]::[Transaction ID//User ID//Transaction Date and Time]"
+          data-listtitletexts="[Transaction ID//User ID//Date & Time]::[Transaction ID//User ID//Date & Time]"
           data-listitembtnids="[billingDetailsBtn//billingVoidBtn]::[billingDetailsBtn//billingVoidBtn]"
           data-listitembtntexts="[Details 📒//Void 📕]::[Details 📒//Void 📕]"
           data-listitembtncolors="[yellow//red]::[yellow//red]"
@@ -378,6 +327,31 @@
           data-listitembtnids="[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]"
           data-listitembtntexts="[Details 📙]::[Details 📙]::[Details 📙]::[Details 📙]::[Details 📙]"
           data-listitembtncolors="[orange]::[orange]::[orange]::[orange]::[orange]"
+        ></div>
+      </section>
+
+      <!-- 🔥 accesscontrol 🔥 -->
+      <section
+        id="accesscontrol-section"
+        data-icons="fa-address-book"
+        data-sectiontexts="Access Control"
+        data-color="violet-fuchsia-red"
+        class="section"
+      >
+        <div id="section-header" data-title="Access Control" data-subtitle="System Access Management" data-mainbtntext="Create 🔧"></div>
+        <div id="section-stats"></div>
+        <div
+          id="section-content"
+          data-sectioncount="1"
+          data-tabtitles="System Permissions::System Roles::System Users::System Logs"
+          data-subtitles="All Permissions::All Roles::All Users::All Logs"
+          data-sectiononesearchtext="Search keyword..."
+          data-sectiononesettings="1"
+          data-listemptytexts="No permissions yet::No roles yet::No users yet::No logs yet"
+          data-listtitletexts="[Permission ID//Permission//Permission Mode]::[Role ID//Role//Role Permissions]::[User ID//User//User Role]::[User ID//User//Module//User Action//Action Date and Time]"
+          data-listitembtnids="[permissionUpdateBtn//permissionDeleteBtn]::[roleUpdateBtn//roleDeleteBtn]::[userUpdateBtn//userDeleteBtn]::[]"
+          data-listitembtntexts="[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]::[]"
+          data-listitembtncolors="[blue//red]::[blue//red]::[blue//red]::[]"
         ></div>
       </section>
 
@@ -428,6 +402,32 @@
           data-sectiontwoemptylist="No data to sync yet"
           data-sectiontwosearchtext="Enter any ID..."
           data-sectiontwobtntext="Force Dequeue"
+        ></div>
+      </section>
+
+      <!-- 🔥 maintenance 🔥 -->
+      <section id="maintenance-section" data-icons="fa-dumbbell" data-color="cyan-blue-sky" class="section">
+        <div
+          id="section-header"
+          data-title="Equipment Maintenance"
+          data-subtitle="Manage Gym Equipment Maintenance"
+          data-middletext="Monitor and log maintenance for all gym equipment"
+          data-mainbtntext="Log Maintenance 🛠️"
+        ></div>
+        <div id="section-stats"></div>
+        <div
+          id="section-content"
+          data-sectioncount="1"
+          data-tabtitles="Equipment Maintenance Records::View system activities and events"
+          data-subtitles="Upcoming and past equipment maintenance::System Logs"
+          data-sectiononesearchtext="Search equipment..."
+          data-sectiontwosearchtext="Search logs..."
+          data-sectiononesettings="1"
+          data-listemptytexts="No equipment maintenance records::No logs available"
+          data-listtitletexts="[Equipment Name//Last Maintenance//Status]::[Timestamp//Type//Message]"
+          data-listitembtnids="[maintenanceDetailsBtn]::[viewLogDetails]"
+          data-listitembtntexts="[Details 🛠️]::[Details 🔍]"
+          data-listitembtncolors="[orange]::[blue]"
         ></div>
       </section>
 
