fix: list item height

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -174,7 +174,7 @@
           data-listtitletexts="[User ID//User//Date Registered]::[User ID//User//Date & Time]"
           data-listitembtnids="[userEditDetailsBtn]::[userViewDetailsBtn//userVoidBtn]"
           data-listitembtntexts="[Edit Details ⚙]::[View Details ⚙//Void 📕]"
-          data-listitembtncolors="[orange]::[orange//red]"
+          data-listitembtncolors="[orange]::[gray//red]"
           data-sectiontwotitletexts="Quick Check-In::Upload user QR code or enter ID manually"
           data-sectiontwosettings="1"
           data-sectiontwoemptylist='<p>Status - No connection</p><p class="text-sm">No uploaded QR yet</p>'
