fix: list item width

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -349,9 +349,9 @@
           data-sectiononesettings="1"
           data-listemptytexts="No permissions yet::No roles yet::No users yet::No logs yet"
           data-listtitletexts="[Permission ID//Permission//Permission Mode]::[Role ID//Role//Role Permissions]::[User ID//User//User Role]::[User ID//User//Module//User Action//Action Date and Time]"
-          data-listitembtnids="[permissionUpdateBtn//permissionDeleteBtn]::[roleUpdateBtn//roleDeleteBtn]::[userUpdateBtn//userDeleteBtn]::[]"
-          data-listitembtntexts="[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]::[]"
-          data-listitembtncolors="[blue//red]::[blue//red]::[blue//red]::[]"
+          data-listitembtnids="[permissionUpdateBtn//permissionDeleteBtn]::[roleUpdateBtn//roleDeleteBtn]::[userUpdateBtn//userDeleteBtn]::[actionDetailsBtn]"
+          data-listitembtntexts="[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]::[View Action Details 🔧]"
+          data-listitembtncolors="[blue//red]::[blue//red]::[blue//red]::[gray]"
         ></div>
       </section>
 
