--- a/src/html/admin_content.html
+++ b/src/html/admin_content.html
@@ -5,8 +5,8 @@
       <div class="section-content-h h-[96px]">
         <div class="section-content-h2">
           <button id="${sectionName}_tab" class="section-content-tab hidden bg-gray-200 hover:bg-gray-300 min-w-[150px]">
-            <p class="mb-6 text-base"></p>
-            <div class="absolute inset-0 mt-6 content-center">
+            <p class="mb-5 2xl:mb-6 text-sm 2xl:text-base"></p>
+            <div class="absolute inset-0 mt-5 2xl:mt-6 content-center">
               <p class="text-xs text-gray-500"></p>
               <i class="fas fa-spinner hidden animate-spin text-gray-400"></i>
             </div>
@@ -42,7 +42,7 @@
           </button>
         </div>
       </div>
-      <div class="scrollbar-light min-h-[425px] max-h-[425px] p-6"></div>
+      <div class="scrollbar-light min-h-[425px] max-h-[425px] p-2 2xl:p-6"></div>
     </div>
   </div>
   <div class="flex flex-col col-span-1 hidden 2xl:col-span-4">
