feat: system logs

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -226,18 +226,18 @@
         ></div>
       </section>
 
-      <!-- 🔥 store-selling 🔥 -->
+      <!-- 🔥 store-pos 🔥 -->
       <section
-        id="store-selling-section"
+        id="store-pos-section"
         data-icons="fa-store::fa-cart-shopping"
-        data-sectiontexts="Store::Selling Area"
+        data-sectiontexts="Store::Point of Sale"
         data-color="yellow-orange-rose"
         class="section"
       >
         <div
           id="section-header"
           data-title="Store"
-          data-subtitle="Selling Area"
+          data-subtitle="Point of Sale"
           data-middletext='<p class="skew-x-12 text-white">📆 July 25, 2025 ⌚ 7:30AM</p>'
           data-mainbtntext="Add New Product 🛒"
           data-subbtntext="Logs 📜"
@@ -348,7 +348,7 @@
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
           data-listemptytexts="No permissions yet::No roles yet::No users yet::No logs yet"
-          data-listtitletexts="[Permission ID//Permission//Permission Mode]::[Role ID//Role//Role Permissions]::[User ID//User//User Role]::[User ID//User//Module//User Action//Action Date and Time]"
+          data-listtitletexts="[Permission ID//Permission//Permission Mode]::[Role ID//Role//Role Permissions]::[User ID//User//User Role]::[User ID//User//Module(s)//User Action//Action Date and Time]"
           data-listitembtnids="[permissionUpdateBtn//permissionDeleteBtn]::[roleUpdateBtn//roleDeleteBtn]::[userUpdateBtn//userDeleteBtn]::[actionDetailsBtn]"
           data-listitembtntexts="[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]::[Update 🖊️//Delete 🗑️]::[View Action Details 🔧]"
           data-listitembtncolors="[blue//red]::[blue//red]::[blue//red]::[gray]"
