--- a/src/html/admin_modal.html
+++ b/src/html/admin_modal.html
@@ -68,9 +68,9 @@
           <div class="relative cursor-pointer">
             <select
               id="input-spinner"
-              class="w-full cursor-pointer appearance-none rounded-md border-2 border-gray-300 bg-gray-100 px-4 py-3 duration-300 focus:outline-amber-500 focus:ring-2 focus:ring-amber-200"
+              class="w-full cursor-pointer appearance-none rounded-md border-2 border-gray-300 bg-gray-100 px-2 py-1 text-sm duration-300 focus:outline-amber-500 focus:ring-2 focus:ring-amber-200 2xl:px-4 2xl:py-3 2xl:text-base"
             ></select>
-            <p class="absolute right-0 top-0 m-4 text-xs text-gray-400">▼</p>
+            <p class="absolute right-0 top-0 m-2 text-xs text-gray-400 2xl:m-4">▼</p>
           </div>
         </div>
 
